--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -52,6 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:9000"
+  }
 }
